--- a/style.css
+++ b/style.css
@@ -146,3 +146,9 @@ input:focus + .slider {
       border-bottom: .4rem solid #8F2316;
       color: #fff;
   }
+
+  @media (max-width : 991px){
+      .calc-screen, .keypad{
+          width: 70%;
+      }
+  }
