--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,3 +3,12 @@
 .container {
   max-width: 100vw;
 }
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  a {
+    text-decoration: none;
+  }
+}
