--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,21 +1,75 @@
 @import "./variables.scss";
+
+ul.responsive-navbar {
+  background-color: #fff;
+  transition: li 2s ease;
+  padding: 20px 0;
+  li {
+    list-style: none;
+    text-align: center;
+    padding: 1rem 0;
+    font-family: "Montserrat", sans-serif;
+  }
+  a {
+    text-decoration: none;
+    color: $normal-text;
+
+    &:hover {
+      color: $header-text;
+    }
+  }
+}
 .nav-container {
-  margin: 0 12%;
+  background-color: $white;
+  max-width: 100vw;
+  padding: 1.5rem 15%;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  ul.navbar {
+    display: flex;
+    align-items: center;
+    li {
+      &.menu {
+        list-style: none;
+        padding: 0 12px;
+        font-family: "Montserrat", sans-serif;
+      }
+    }
+
+    a {
+      text-decoration: none;
+      color: $normal-text;
+      &:hover {
+        color: $header-text;
+      }
+    }
+  }
+
+  .hamburger {
+    cursor: pointer;
+    display: none;
+    fill: $normal-text;
+    transition: svg 0.7s ease;
+    &:hover {
+      fill: $normal-text;
+    }
+  }
+  h1.logo {
+    &.logo {
+      @include blue-text(24px);
+    }
+  }
 }
 
-ul {
-  display: flex;
-  align-items: center;
-}
-
-ul li.menu {
-  list-style: none;
-  padding: 0 12px;
-}
-
-h1.logo {
-  @include blue-text(24px);
+@media (max-width: 768px) {
+  .nav-container {
+    padding: 20px 10%;
+    .hamburger {
+      display: block;
+    }
+    ul.navbar {
+      display: none;
+    }
+  }
 }
