--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -1,6 +1,7 @@
 @import "./variables.scss";
 .services-container {
   padding: 0 15%;
+  margin-top: 80px;
   h1 {
     @include blue-text(40px);
     text-align: center;
