--- a/src/styles/Video.scss
+++ b/src/styles/Video.scss
@@ -1,6 +1,7 @@
 @import "./variables.scss";
 
 .video-container {
+  max-width: 100vw;
   padding: 0 25%;
   margin-top: 80px;
   text-align: center;
@@ -13,9 +14,34 @@
   video {
     margin-top: 50px;
   }
+
+  @media screen and (max-width: 1100px) {
+    padding: 0 10%;
+  }
+
+  @media screen and (max-width: 768px) {
+    padding: 0 5%;
+    h1 {
+      @include blue-text(24px);
+    }
+
+    video {
+      width: 360px;
+    }
+  }
+
+  @media screen and (max-width: 576px) {
+    padding: 0 5%;
+    video {
+      display: none;
+    }
+  }
 }
 .bg {
   height: 250px;
   background-color: $header-text;
   margin-top: -200px;
+  @media screen and (max-width: 480px) {
+    display: none;
+  }
 }
