--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -1,6 +1,7 @@
 @import "./variables.scss";
 .services-container {
-  padding: 0 15%;
+  max-width: 100vw;
+  margin: 0 15%;
   margin-top: 80px;
   h1 {
     @include blue-text(40px);
@@ -23,6 +24,45 @@
     grid-gap: 30px;
     margin: 45px 0;
   }
+
+  @media screen and (max-width: 1024px) {
+    margin: 0 10%;
+    .single-service {
+      width: 80vw;
+      display: grid;
+      grid-template-columns: repeat(2, minmax(250px, 1fr));
+      grid-gap: 30px;
+      margin: 45px auto;
+    }
+  }
+  @media screen and (max-width: 768px) {
+    margin: 0 5%;
+    .single-service {
+      width: 80vw;
+      display: grid;
+      grid-template-columns: repeat(1, minmax(250px, 1fr));
+      // grid-gap: 30px;
+      margin: 45px auto;
+    }
+
+    h1 {
+      @include blue-text(24px);
+    }
+
+    p {
+      @include para-text(14px);
+      &.subHead {
+        padding: 0 5%;
+        text-align: center;
+      }
+    }
+
+    .single-service {
+      display: grid;
+      grid-template-columns: repeat(1, minmax(250px, 1fr));
+      margin: 15px 0;
+    }
+  }
 }
 
 .service-container {
@@ -36,5 +76,9 @@
     align-items: center;
     margin-bottom: 15px;
     gap: 15px;
+  }
+
+  @media screen and (max-width: 768px) {
+    padding: 25px;
   }
 }
