--- a/src/styles/MeetUs.scss
+++ b/src/styles/MeetUs.scss
@@ -2,6 +2,7 @@
 
 .teamContainer {
   margin: 80px 15% 0;
+  max-width: 100vw;
 
   section {
     &.title {
@@ -34,6 +35,54 @@
       p {
         @include para-text(14px);
         text-align: center;
+      }
+    }
+  }
+
+  @media screen and (max-width: 1024px) {
+    margin: 40px 5% 0;
+    section {
+      &.testimonials {
+        grid-template-columns: repeat(1, minmax(250px, 1fr));
+        .card {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+          margin-top: 20px;
+        }
+        img {
+          width: 70%;
+        }
+      }
+    }
+  }
+  @media screen and (max-width: 576px) {
+    section {
+      &.testimonials {
+        grid-template-columns: repeat(1, minmax(250px, 1fr));
+        .card {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+        }
+        img {
+          width: 100%;
+        }
+      }
+
+      &.title {
+        h1 {
+          @include blue-text(24px);
+          text-align: center;
+          margin-bottom: 10px;
+        }
+        p {
+          @include para-text(14px);
+          text-align: center;
+          margin: 0 0;
+        }
       }
     }
   }
