--- a/src/styles/MeetUs.scss
+++ b/src/styles/MeetUs.scss
@@ -21,6 +21,7 @@
     &.testimonials {
       display: grid;
       grid-template-columns: repeat(3, minmax(250px, 1fr));
+      justify-content: center;
       margin: 80px 0 0;
 
       img {
