--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -4,7 +4,7 @@
   max-width: 100vw;
   section {
     &.internship {
-      padding: 0 15%;
+      padding: 40px 15% 80px;
       background-color: #fff;
       margin: 40px 0;
       display: flex;
