--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -28,7 +28,7 @@
   @media screen and (max-width: 1024px) {
     margin: 0 10%;
     .single-service {
-      width: 80vw;
+      // width: 80vw;
       display: grid;
       grid-template-columns: repeat(2, minmax(250px, 1fr));
       grid-gap: 30px;
@@ -37,13 +37,6 @@
   }
   @media screen and (max-width: 768px) {
     margin: 0 5%;
-    .single-service {
-      width: 80vw;
-      display: grid;
-      grid-template-columns: repeat(1, minmax(250px, 1fr));
-      // grid-gap: 30px;
-      margin: 45px auto;
-    }
 
     h1 {
       @include blue-text(24px);
@@ -58,8 +51,10 @@
     }
 
     .single-service {
-      display: grid;
-      grid-template-columns: repeat(1, minmax(250px, 1fr));
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
       margin: 15px 0;
     }
   }
